Fixed spacing

--- a/website/assets/css/main.css
+++ b/website/assets/css/main.css
@@ -29,7 +29,6 @@ body {
     display: block; /* This will put the pseudo element on its own line. */
     margin: 0 auto; /* This will center the border. */
     width: 50%; /* Change this to whatever width you want. */
-    padding-top: 20px; /* This creates some space between the element and the border. */
     border-bottom: 1px solid black; /* This creates the border. Replace black with whatever color you want. */
     color: rgb(0, 0, 70);
 }
@@ -40,7 +39,7 @@ h2 {
 }
 
 .sectionone p {
-    margin-top: 60px;
+    margin-top: 40px;
     font-size: 21px;
     text-align: center;
 
